--- a/package.json
+++ b/package.json
@@ -11,17 +11,9 @@
     "devtools": "react-devtools"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "^0.1.10",
-    "@react-navigation/material-top-tabs": "^5.2.16",
-    "@react-navigation/native": "^5.7.3",
     "react": "16.13.1",
     "react-devtools": "^4.8.2",
-    "react-native": "0.63.2",
-    "react-native-gesture-handler": "^1.7.0",
-    "react-native-reanimated": "^1.13.0",
-    "react-native-safe-area-context": "^3.1.7",
-    "react-native-screens": "^2.10.1",
-    "react-native-tab-view": "^2.15.1"
+    "react-native": "0.63.2"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
